cabal-version: 1.12

name:           rngeneration
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Vlix/rngeneration#readme>
homepage:       https://github.com/githubuser/rngeneration#readme
bug-reports:    https://github.com/githubuser/rngeneration/issues
author:         Felix Paulusma
maintainer:     felix.paulusma@gmail.com
copyright:      2019 Felix Paulusma
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files: README.md
                    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/Vlix/rngeneration

library
  exposed-modules:  RNGeneration
  other-modules:    RNGeneration.Parsing
                  , RNGeneration.Parsing.Types
                  , RNGeneration.Types
                  , RNGeneration.Util
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
                  , aeson
                  , hashable
                  , text
                  , transformers
                  , unordered-containers
  default-language: Haskell2010
  default-extensions: OverloadedStrings
                    , LambdaCase
                    , RecordWildCards

executable rngeneration-exe
  main-is:          Main.hs
  -- other-modules:
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base >=4.7 && <5
                  , rngeneration
  default-language: Haskell2010

test-suite rngeneration-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  -- other-modules:
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:    base >=4.7 && <5
                  , rngeneration
  default-language: Haskell2010
